# backporcher

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  HANDOFF.md  README.md  SECURITY.md  backporcher-dashboard.service  backporcher-dashboard.service.example  backporcher-theme.css  backporcher.service.example  docker-compose.example.yml  pyproject.toml  voltron.service
.github/workflows/: ci.yml
docs/: docker-install-notes.md
docs/solutions/: daemon-task-reset-race.md  docker-nofile-ulimit.md  nofile-ulimit-uv-thread-create.md  opus-for-complex-refactoring.md  stale-branch-cleanup.md  worktree-permissions.md
docs/superpowers/specs/: 2026-03-24-multi-agent-backends-design.md
scripts/: configure.sh  setup-sandbox.sh  start-dashboard.sh
src/: __init__.py  agent.py  circuit_breaker.py  cli.py  cli_tasks.py  config.py  dashboard.py  dashboard_actions.py  dashboard_api.py  dashboard_sse.py  db.py  db_migrations.py  db_schema.py  db_sync.py  dispatch.py  dispatch_helpers.py  dispatcher.py  git_ops.py  github.py  github_base.py  github_pr.py  navigation.py  notifications.py  prompts.py  reflection.py  repo_intel.py  review.py  safety.py  server.py  triage.py  worker.py  worker_ci.py  worker_merge.py  worker_poller.py  worker_startup.py
src/backends/: __init__.py  claude.py  codex.py  gemini.py  kimi.py  opencode.py
src/graph/: __init__.py  context.py  incremental.py  parser.py  store.py
static/: index.html
tests/: test_cli.py  test_config.py  test_db.py  test_dispatcher.py  test_github.py  test_pid_lock.py
