[project]
name = "backporcher"
version = "0.2.0"
description = "Parallel Claude Code agent dispatcher — CLI + worker daemon"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "aiohttp>=3.9.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[project.scripts]
backporcher = "src.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
