[project]
name = "backporcher"
version = "0.2.0"
description = "Parallel Claude Code agent dispatcher — CLI + worker daemon"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "aiohttp>=3.9.0",
    "tree-sitter==0.25.2",
    "tree-sitter-language-pack==0.13.0",
    "networkx==3.3",
]

[tool.setuptools.packages.find]
include = ["src*"]

[project.scripts]
backporcher = "src.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
